force-app/main/default/objects/Contact/fields/Total_Training__c.field-meta.xml
<CustomField>
    <fullName>Total_Training__c</fullName>
    <label>Total Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>