force-app/main/default/objects/Contact/fields/Total_Training_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Training_Cost__c</fullName>
    <label>Total Training Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>