force-app/main/default/objects/Contact/listViews/SkillUp_Contacts.listView-meta.xml
<ListView>
    <fullName>SkillUp_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>salesforce,nagarro,makepositive</value>
    </filters>
    <label>SkillUp Contacts</label>
</ListView>